<resources>
    <string name="app_name">龙果</string>
    <string name="action_settings">Settings</string>
    <string name="no_network_connection_toast">网络连接有问题！</string>
    <string name="internal_server_error">500:服务器出现问题</string>
    <string name="request_not_ound">404:无法找到指定位置的资源</string>
    <string name="unauthorized">401:访问被拒绝，客户试图未经授权访问受密码保护的页面。</string>
    <string name="time_space_to">至</string>
    <string name="click_back_two_times">再按一次退出程序</string>
    <string name="developing">功能尚在完善中，敬请期待！</string>
    <string name="err_no_chat">您现在还没有在沟通客户哦</string>
    <string name="err_no_reservation">您还没有预约单</string>
    <string name="err_no_check">您还没有看房任务</string>
    <string name="err_no_measure">您还没有量房任务</string>
    <string name="err_no_comment">您还没有待处理评价</string>
    <string name="err_no_live">您还没有申请直播任务</string>
    <string name="err_no_data">列表是空的</string>
    <string name="err_no_goods">没有符合的商品</string>
    <string name="err_go_to_fill_info">快去完善信息接单吧</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="login_role">登录角色</string>
    <string name="register_new">注册新账户</string>
    <string name="lost_pwd">忘记密码</string>
    <string name="apply_enter">申请入驻</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_sure">请确认密码</string>
    <string name="no_login_role">暂无可登录角色，请先入驻</string>
    <string name="pwd_invalid">密码必须是数字或者字母</string>
    <string name="pwd_error">两次密码输入不一致，请重新输入</string>
    <string name="mobile_no_empty">手机号不能为空！</string>
    <string name="mobile_valid">请输入有效手机号码！</string>
    <string name="pwd_no_empty">密码不能为空！</string>
    <string name="save">完成</string>
    <string name="input_code">输入验证码</string>
    <string name="code_valid">请输入有效验证码！</string>
    <string name="pwd_valid">请输入有效的密码！</string>
    <string name="pwd_short">密码位数不能少于6位！</string>
    <string name="get_code">获取验证码</string>
    <string name="agree_deal">我已阅读并同意上述协议</string>
    <string name="agree_longguo_deal">我已阅读并同意龙果</string>
    <string name="user_deal">《用户注册协议》</string>
    <string name="user_deal_title">用户注册协议</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="sale_enter_deal">导购员入驻协议</string>
    <string name="agent_enter_deal">经纪人入驻协议</string>
    <string name="set_pwd">设置密码</string>
    <string name="enter">申请入驻</string>
    <string name="lost_pwd_">忘记密码</string>
    <string name="enter_role">入驻角色</string>
    <string name="enter_feedback">入驻反馈</string>
    <string name="sale_feedback">您已经可以以导购员的身份登录\n账号密码与营业员相同</string>
    <string name="designer_feedback">您的“入驻申请”已被记录\n请移步PC端完成入驻流程\n http://longguojz.mmall.com/</string>
    <string name="sorry_phone">当前角色未建立，请联系账号管理员!</string>
    <string name="call_phone">可拨打4008-213-213</string>
    <string name="no_smsCode">验证码不能为空！</string>
  <string name="role_sale">导购员·
    <font color='gray'>
      <small>SALE</small>
    </font>
  </string>
  <string name="role_designer">设计师·
    <font color='gray'>
      <small>DESIGNER</small>
    </font>
  </string>
  <string name="role_agent">经纪人·
    <font color='gray'>
      <small>AGENT</small>
    </font>
  </string>
    <string name="sure">确认</string>
    <string name="login_choose_role">由于您的账户属于多角色账户请选择本次登陆的角色</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">沟通</string>
    <string name="task">任务</string>
    <string name="order">订单</string>
    <string name="manager">管理</string>
    <string name="personal">个人</string>
    <string name="shopping_guide">优导天地</string>
    <string name="dream_list">梦想清单</string>
    <string name="coupon_manage">优惠券管理</string>
    <string name="create_offer">新建报价单</string>
    <string name="order_set">预约设置</string>
    <string name="my_live">我要直播</string>
    <string name="my_house_resource">认领房源</string>
    <string name="house_manager">房源管理</string>
    <string name="guide_manual">宣传手册</string>
    <string name="edit_title">编辑标题</string>
    <string name="manage_tool">操作说明</string>
    <string name="service_area">服务小区</string>
    <string name="option_explain">操作说明</string>
    <string name="scheme_manage">方案管理</string>
    <string name="personal_info">个人信息</string>
  <string name="comment_manager">评价管理</string>
  <string name="personal_info_modify">个人信息修改</string>
    <string name="down_guide">导购手册下载中…</string>
    <string name="search_goods_hint">搜索</string>
    <string name="load_more_text">正在加载…</string>
    <string name="user_record">客户档案</string>
    <string name="customer_portrait">客户特征</string>
    <string name="offer_list">报价单</string>
    <string name="chat_history">聊天记录</string>
    <string name="customer_order">TA的订单</string>
    <string name="plan_show">平面部署</string>
    <string name="effect_show">效果图</string>
    <string name="account_show">施工清单</string>
    <string name="customer_order_name">客户姓名：%1$s</string>
    <string name="customer_order_phone">手机号码：%1$s</string>
    <string name="customer_order_address">客户地址：%1$s</string>
    <string name="change_customer_nickname">更改备注名称</string>
    <string name="bracket">（%1$s）</string>
    <string name="coupon_c">：%1$s</string>
    <string name="switch_sale">切换导购</string>
    <string name="choose_coupon">选择优惠劵</string>
    <string name="item_set_top">置顶</string>
    <string name="item_cancel_top">取消置顶</string>
    <string name="customer_name">客户姓名</string>
    <string name="order_id">订单编号：%1$s</string>
    <string name="order_detail">订单详情</string>
    <string name="order_change_price">修改价格</string>
    <string name="order_change_logistics">修改物流</string>
    <string name="order_refund">设置退款</string>
    <string name="order_c_info">客户信息</string>
    <string name="order_c_name">客户姓名：</string>
    <string name="order_c_phone">客户电话：</string>
    <string name="order_c_address">送货地址：</string>
    <string name="good_info">商品信息</string>
    <string name="good_type">型号：</string>
    <string name="good_standard">规格：</string>
    <string name="good_price">售价：</string>
    <string name="good_num">数量：</string>
    <string name="good_total">合计：</string>
    <string name="returnable">是否可退：</string>
    <string name="base_info">基本信息</string>
    <string name="order_code">订单号码：</string>
    <string name="order_type">订单类型：</string>
    <string name="order_status">订单状态：</string>
    <string name="order_total">订单总额：</string>
    <string name="order_pay">已付金额：</string>
    <string name="order_pay_history">支付记录：</string>
    <string name="intent_money">使用意向金</string>
    <string name="intent_money_id">意向金单号：</string>
    <string name="intent_money_discount">抵扣金额：</string>
    <string name="discount_info">优惠折扣信息：</string>
    <string name="discount_money">优惠金额：</string>
    <string name="logistics_info">优惠信息</string>
    <string name="logistics_status">物流状态：</string>
    <string name="delivery_type">送货方式：</string>
    <string name="delivery_address">送货地址：</string>
    <string name="delivery_date">送货日期：</string>
    <string name="install_date">安装日期：</string>
    <string name="delivery_real_date">实际送货日期：</string>
    <string name="install_real_date">实际安装日期：</string>
    <string name="remark_info">备注信息</string>
    <string name="business_info">商户信息</string>
    <string name="market_name">商场名称：</string>
    <string name="business_name">商户名称：</string>
    <string name="business_phone">商场电话：</string>
    <string name="housnumber">门牌号：</string>
    <string name="brand">品牌：</string>
    <string name="series">系列：</string>
    <string name="supply">供货方：</string>
    <string name="my_order">订单</string>
    <string name="check_status_1">草稿</string>
    <string name="check_status_2">被驳回</string>
    <string name="check_status_3">审核通过</string>
    <string name="check_status_4">待审核</string>
    <string name="owner_info">业主信息</string>
    <string name="owner_name">姓名：</string>
    <string name="owner_phone">手机：</string>
    <string name="house_info">房屋信息</string>
    <string name="house_type">房屋类型：</string>
    <string name="design_budget">设计预算：</string>
    <string name="fitment_budget">装修预算：</string>
    <string name="fitment_area">装修区域：</string>
    <string name="meet_time">见面时间</string>
    <string name="reservation_meet_time">预约见面时间：</string>
    <string name="order_server_status">订单服务状态</string>
    <string name="house_reserved">已量房</string>
    <string name="watch_scheme">已看方案</string>
    <string name="design_deal">设计签约</string>
    <string name="design_hand">设计交付</string>
    <string name="remark">备注：</string>
    <string name="platform_feedback">平台反馈：</string>
    <string name="edit">编辑</string>
    <string name="change">修改</string>
    <string name="family_status">家庭状况：</string>
    <string name="family_pet">饲养宠物：</string>
    <string name="owner_love">个人喜好：</string>
    <string name="user_portrait">用户画像</string>
    <string name="online_contact">在线沟通</string>
    <string name="remark_1">备注</string>
    <string name="input_here">请在此输入</string>
    <string name="change_time_tip">请求提交成功，等待客户同意中！</string>
    <string name="submit_success">提交成功！</string>
    <string name="designer_change_status">您确定要修改服务状态吗？</string>
    <string name="past_time">预约时间不能是过去时间！</string>
    <string name="im_status_false">请前往个人中心上线</string>
    <string name="info_accept">已接单</string>
    <string name="info_reject">已拒单</string>
    <string name="info_un_accept">未接单</string>
    <string name="refuse_cause">拒接原因</string>
    <string name="designer_plan">平面部署</string>
    <string name="select_cause">请选择拒单原因</string>
    <string name="time_out">时间排期无法匹配</string>
    <string name="budget_out">用户预算无法匹配</string>
    <string name="command_out">无法满足客户需求</string>
    <string name="area_out">地域不匹配</string>
    <string name="other">其它</string>
    <string name="other_cause">\t请输入拒单原因,最长不超过200字</string>
    <string name="no_empty">拒单原因不能为空</string>
    <string name="no_remark">备注信息不能为空</string>
    <string name="warm_hint">温馨提示</string>
    <string name="change_time">用户修改见面时间至\n%1$s</string>
    <string name="good_name">商品名称：</string>
    <string name="price_id">价钱码：</string>
    <string name="unit_price">单价：</string>
    <string name="sale_price">销售价格</string>
    <string name="discount">折扣优惠</string>
    <string name="tip_discount">抹零</string>
    <string name="tip_mark">抹零金额必须小于100元</string>
    <string name="deal_price">成交价格</string>
    <string name="change_sure">确认修改</string>
    <string name="yuan">元</string>
    <string name="reservation_list">预约单</string>
    <string name="comment_management">评价管理</string>
    <string name="live_plan">直播排片</string>
    <string name="reservation_time">预约时间：</string>
    <string name="arrival">已到店</string>
    <string name="un_arrival">未到店</string>
    <string name="negative_comment">差评</string>
    <string name="check_detail">查看详情</string>
    <string name="enter_live">进入直播</string>
    <string name="live_time">直播时间</string>
    <string name="live_list">直播列表</string>
    <string name="follow_persons">关注人数：</string>
    <string name="person">人</string>
    <string name="ready_go">即将开始</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="enter_live_prompt">您有正在直播的节目，是否进入？</string>
    <string name="cannot_enter_live_prompt">直播还未开始，请稍后再试。</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="rating">评分</string>
    <string name="comment">评价</string>
    <string name="comment_detail">评价详情</string>
    <string name="comment_content">评价内容</string>
    <string name="comment_time">评价时间：</string>
    <string name="reply_time">回复时间：</string>
    <string name="reply_comment">回复评论</string>
    <string name="submit">提交</string>
    <string name="submit_execute">正在提交…</string>
    <string name="please_input_tel_phone">请输入新手机号</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="next">下一步</string>
</resources>