<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.cody.handler.business.viewmodel.VerifyPhoneNewViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_white"
        android:orientation="vertical">

        <include
            layout="@layout/fw_header"
            bind:onClickListener="@{onClickListener}"
            bind:viewModel="@{viewModel.headerViewModel}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="37dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="31dp"
            android:text="@string/find_password"
            android:textColor="@color/gray_333333"
            android:textSize="28sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_37dp"
            android:layout_marginRight="@dimen/dimens_37dp"
            android:layout_marginTop="@dimen/dimens_44dp"
            android:orientation="vertical">


            <com.cody.xf.widget.PhoneEditText
                android:id="@+id/etPhone"
                style="@style/editPhoneStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_45dp"
                android:background="@drawable/bg_with_bottom_line"
                android:hint="@string/input_phone"
                android:text="@={viewModel.textPhone}"
                android:textColor="@color/gray_333333"
                android:textColorHint="@color/gray_999999"
                android:textSize="@dimen/font_15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_with_bottom_line"
                android:orientation="horizontal">

                <com.cody.xf.widget.ClearEditText
                    android:id="@+id/et_code"
                    style="@style/editValidateStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/input_code"
                    android:text="@={viewModel.msgCode}" />

                <TextView
                    style="@style/DividerStyle"
                    android:layout_width="@dimen/dimens_1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimens_5dp"
                    android:layout_marginLeft="@dimen/dimens_10dp"
                    android:layout_marginRight="@dimen/dimens_10dp"
                    android:layout_marginTop="@dimen/dimens_5dp" />

                <TextView
                    android:id="@+id/getCode"
                    style="@style/EditStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="@{onClickListener::onClick}"
                    android:text="@string/get_code"
                    android:textColor="@drawable/tv_code_selector" />
            </LinearLayout>

            <com.cody.xf.widget.ClearEditText
                android:id="@+id/loginPwd"
                style="@style/EditPwdStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_45dp"
                android:background="@drawable/bg_with_bottom_line"
                android:hint="@string/input_pwd"
                android:text="@={viewModel.userPwd}"
                android:textColor="@color/gray_333333"
                android:textColorHint="@color/gray_999999"
                android:textSize="@dimen/font_15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_37dp"
            android:layout_marginRight="@dimen/dimens_50dp"
            android:layout_marginTop="@dimen/dimens_17dp"
            android:text="@string/verify_text"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/font_12sp" />

        <TextView
            android:id="@+id/login_sure"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="@dimen/dimens_31dp"
            android:layout_marginRight="31dp"
            android:layout_marginTop="@dimen/dimens_15dp"
            android:enabled="@{viewModel.showBlue}"
            android:background="@{viewModel.showBlue?@drawable/login_button_blue:@drawable/login_button_gray}"
            android:gravity="center"
            android:onClick="@{onClickListener::onClick}"
            android:text="@string/confirm"
            android:textColor="@{viewModel.showBlue?@color/main_white:@color/white_99}"
            android:textSize="17sp" />

    </LinearLayout>
</layout>