<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.cody.handler.business.viewmodel.LoginNewViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="37dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="75dp"
            android:text="@string/login"
            android:textColor="@color/gray_333333"
            android:textSize="28sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_37dp"
            android:layout_marginRight="@dimen/dimens_37dp"
            android:layout_marginTop="@dimen/dimens_44dp"
            android:orientation="vertical">


            <com.cody.xf.widget.PhoneEditText
                android:id="@+id/etPhone"
                style="@style/editPhoneStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_45dp"
                android:background="@drawable/bg_with_bottom_line"
                android:hint="@string/input_phone"
                android:text="@={viewModel.textPhone}"
                android:textColor="@color/gray_333333"
                android:textColorHint="@color/gray_999999"
                android:textSize="@dimen/font_15sp" />

            <com.cody.xf.widget.ClearEditText
                android:id="@+id/loginPwd"
                style="@style/EditPwdStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_45dp"
                android:background="@drawable/bg_with_bottom_line"
                android:hint="@string/input_pwd"
                android:text="@={viewModel.userPwd}"
                android:textColor="@color/gray_333333"
                android:textColorHint="@color/gray_999999"
                android:textSize="@dimen/font_15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_sure"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="@dimen/dimens_31dp"
            android:layout_marginRight="31dp"
            android:layout_marginTop="@dimen/dimens_15dp"
            android:background="@{viewModel.showBlue?@drawable/login_button_blue:@drawable/login_button_gray}"
            android:enabled="@{viewModel.showBlue}"
            android:gravity="center"
            android:onClick="@{onClickListener::onClick}"
            android:text="@string/login"
            android:textColor="@{viewModel.showBlue?@color/main_white:@color/white_99}"
            android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_3dp">


            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="27dp"
                android:onClick="@{onClickListener::onClick}"
                android:padding="@dimen/dimens_10dp"
                android:text="@string/lost_pwd"
                android:textColor="@color/gray_999999"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="27dp"
                android:onClick="@{onClickListener::onClick}"
                android:padding="@dimen/dimens_10dp"
                android:text="@string/guide"
                android:textColor="@color/gray_999999"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>
</layout>